@@ -754,7 +754,7 @@ _max_gen = 10
 _pg_brk = 0
 _opt_cite = gtk.TRUE
 
-_options = [ _person_id, _max_gen, _pg_brk, _opt_cite ]
+_options = ( _person_id, _max_gen, _pg_brk, _opt_cite )
 
 #------------------------------------------------------------------------
 #
