@@ -184,7 +184,7 @@ _style_name = "default"
 _person_id = ""
 _max_gen = 1
 _pg_brk = 0
-_options = [ _person_id, _max_gen, _pg_brk ]
+_options = ( _person_id, _max_gen, _pg_brk )
 
 #------------------------------------------------------------------------
 #
