@@ -57,7 +57,7 @@ from intl import gettext as _
 _person_id = ""
 _max_gen = 0
 _pg_brk = 0
-_options = [ _person_id, _max_gen, _pg_brk ]
+_options = ( _person_id, _max_gen, _pg_brk )
 
 
 #------------------------------------------------------------------------
